--- a/SMU_PATH/app/src/main/res/layout/activity_main.xml
+++ b/SMU_PATH/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,17 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp"
-        app:theme="@style/ToolbarTheme">
+        app:theme="@style/ToolbarTheme"
+        tools:layout_editor_absoluteX="0dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="SMU PATH"
-            android:textStyle="bold"
             android:textColor="@color/mainColor"
-            android:textSize="20dp">
+            android:textSize="20dp"
+            android:textStyle="bold">
 
         </TextView>
 
@@ -50,7 +51,7 @@
         android:text="건물을 어떻게 찾을까?"
         android:textColor="@color/mainColor"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn1"
+        app:layout_constraintBottom_toTopOf="@+id/cameraBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info"
@@ -60,7 +61,7 @@
     </TextView>
 
     <Button
-        android:id="@+id/btn1"
+        android:id="@+id/cameraBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/option1"
@@ -75,7 +76,7 @@
         app:layout_constraintVertical_bias="0.624" />
 
     <Button
-        android:id="@+id/btn2"
+        android:id="@+id/searchBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/option1"
