--- a/SMU_PATH/app/src/main/res/values/colors.xml
+++ b/SMU_PATH/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="mainColor">#003D91</color>
     <color name="gray">#00224E</color>
+    <color name="search">#707F93</color>
 </resources>
