--- a/SMU_PATH/app/src/main/res/layout/activity_splash.xml
+++ b/SMU_PATH/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,7 @@
         android:layout_margin="50dp"/>
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="322dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
