--- a/SMU_PATH/app/src/main/res/values/colors.xml
+++ b/SMU_PATH/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#3F51B5</color>
     <color name="purple_700">#003D91</color>
-    <color name="teal_200">#00224E</color>
-    <color name="teal_700">#00224E</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mainColor">#003D91</color>
