--- a/SMU_PATH/app/src/main/res/layout/list_item.xml
+++ b/SMU_PATH/app/src/main/res/layout/list_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:backgroundTint="#EFEBE9"
+    android:backgroundTint="@color/white"
     android:orientation="vertical"
     app:cardCornerRadius="5dp"
     app:cardElevation="10dp">
@@ -16,33 +16,18 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_academic_num"
+            android:id="@+id/tv_lecture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="학수번호"
+            android:text="강의명"
+            android:textStyle="bold"
             android:textColor="@color/gray"
             android:layout_margin="5dp"/>
-
         <TextView
             android:id="@+id/tv_professor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="교수"
-            android:textColor="@color/gray"
-            android:layout_margin="5dp"/>
-
-        <TextView
-            android:id="@+id/tv_school_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="학년"
-            android:textColor="@color/gray"
-            android:layout_margin="5dp"/>
-        <TextView
-            android:id="@+id/tv_lecture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="강의명"
             android:textColor="@color/gray"
             android:layout_margin="5dp"/>
         <TextView
@@ -60,12 +45,34 @@
             android:textColor="@color/gray"
             android:layout_margin="5dp"/>
         <TextView
+            android:id="@+id/tv_school_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="학년"
+            android:textColor="@color/gray"
+            android:layout_margin="5dp"/>
+        <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="강의시간"
             android:textColor="@color/gray"
             android:layout_margin="5dp"/>
+        <TextView
+            android:id="@+id/tv_academic_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="학수번호"
+            android:textColor="@color/gray"
+            android:layout_margin="5dp"/>
+
+
+
+
+
+
+
+
 
     </LinearLayout>
 
